# time-clock

./: .gitignore  .pre-commit-config.yaml  .yamllint  DESIGN.md  IMPLEMENTATION_STATUS.md  README.md  REVIEW.md  main.py  mypy.ini  pyproject.toml  requirements-dev.txt  requirements.txt  settings.py  tray.py  version.py
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
controllers/: miliuim_controller.py  sickness_controller.py  time_clock_controller.py  vacation_controller.py
core/: balance.py  events.py  hebrew_date.py  report.py  timeutil.py
db/: database.py
design/: data-flow.md  data-model.md  testing.md  time-and-balance.md  v1-features.md  visual-design.md
docs/superpowers/plans/: 2026-07-01-github-bug-feature-report.md
docs/superpowers/specs/: 2026-07-01-github-bug-feature-report-design.md
domain/: __init__.py  enums.py  types.py
help/: index.html  style.css
models/: _row_mapping.py  errors.py  miliuim_model.py  sickness_model.py  time_clock_model.py  vacation_model.py
tests/: conftest.py  test_integration.py  test_issue_templates.py  test_main.py  test_settings.py  test_theme_style.py
tests/controllers/: test_miliuim_controller.py  test_sickness_controller.py  test_time_clock_controller.py  test_times_overlap.py  test_vacation_controller.py
tests/core/: test_balance.py  test_events.py  test_hebrew_date.py  test_report.py  test_timeutil.py
tests/db/: test_check_constraints.py  test_database.py
tests/domain/: test_enums.py  test_types.py
tests/models/: test_errors.py  test_miliuim_model.py  test_sickness_model.py  test_time_clock_model.py  test_vacation_model.py
tests/views/: test_export_dialog_pure.py  test_help_viewer.py  test_help_viewer_dialogs.py  test_main_window.py  test_miliuim_record_dialog_pure.py  test_miliuim_tab.py  test_record_tab_common.py  test_report_dialog.py  test_settings_dialog_pure.py  test_sick_record_dialog_pure.py  test_sickness_tab.py  test_sickness_tab_dedup.py  test_time_clock_tab_actions.py  test_time_clock_tab_dedup.py  test_time_clock_tab_pure.py  test_time_record_dialog_pure.py  test_tray.py  test_tray_thread_safety.py  test_vacation_grant_dialog_pure.py  test_vacation_record_dialog_pure.py  test_vacation_tab.py
theme/: style.py
views/: carry_over_dialog.py  date_picker.py  dialog_common.py  document_attachment.py  enums.py  export_dialog.py  help_viewer.py  main_window.py  miliuim_record_dialog.py  miliuim_tab.py  record_tab_common.py  report_dialog.py  settings_dialog.py  sick_record_dialog.py  sickness_tab.py  tab_widgets.py  time_clock_tab.py  time_record_dialog.py  tray.py  vacation_grant_dialog.py  vacation_record_dialog.py  vacation_tab.py
