[project]
requires-python = ">=3.14"

[tool.ruff]
line-length = 88
target-version = "py314"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP"]

[tool.mypy]
strict = true
ignore_missing_imports = true
explicit_package_bases = true

# These packages are not yet held to the --strict bar. The documented gate
# (CLAUDE.md) and CI both scan domain/, core/, controllers/, models/
# explicitly (see .github/workflows/ci.yml), so db/settings/views are not
# gated today -- but the overrides must live here as the single source of
# truth rather than in a separate mypy.ini, which mypy would otherwise treat
# as taking precedence over this section wholesale. Removing an override
# means that package must first pass `mypy --strict` cleanly.
[[tool.mypy.overrides]]
module = ["db.*"]
ignore_errors = true

[[tool.mypy.overrides]]
module = ["settings"]
ignore_errors = true

[[tool.mypy.overrides]]
module = ["views.*"]
ignore_errors = true

# Pyright runs as a CI + local gate alongside mypy, catching the editor-level
# (Pylance) type errors mypy's scope misses. Scoped to production code, which
# is clean under pyright's default "standard" mode today -- the same layers
# mypy --strict already covers, so this is a belt-and-suspenders ratchet, not
# new coverage. tests/ and views/ are deliberately out of scope: they still
# carry pre-existing pyright findings (issue #31's float->Hours was cleared
# from tests/, but BreakMinutes int-literals, rec.id None-narrowing, and
# similar remain). Widening the include to tests/ + views/ is tracked in #42
# (the Pyright gate), same as the pylint disable-list trim -- do it there, not
# incidentally. Removing a path from this list means it must first pass
# `pyright` cleanly.
[tool.pyright]
include = ["domain", "core", "controllers", "models", "db", "settings.py", "main.py"]
pythonVersion = "3.14"
typeCheckingMode = "standard"

# Pylint runs as a CI + local gate alongside ruff/mypy. source-roots lets it
# resolve intra-project imports despite the space in the repo directory name
# (otherwise every `from core.x import ...` reports a false import-error).
#
# The disabled set baselines pylint to the codebase's current state: these
# categories already occur throughout the pre-existing code (docstring style,
# design-metric "too-many-*", tkinter's build-UI attribute pattern, pytest
# fixture shadowing, duplicate-code) and are deliberately out of scope here.
# Error-level checks and real correctness warnings stay ON, so new code is
# still caught. Trim this list in a dedicated cleanup PR (tracked in #42),
# not incidentally.
[tool.pylint.main]
source-roots = ["."]

[tool.pylint."messages control"]
disable = [
    "duplicate-code",
    "missing-module-docstring",
    "missing-class-docstring",
    "missing-function-docstring",
    "too-many-arguments",
    "too-many-positional-arguments",
    "too-many-locals",
    "too-many-instance-attributes",
    "too-many-return-statements",
    "too-many-branches",
    "too-many-statements",
    "too-many-ancestors",
    "too-many-lines",
    "too-few-public-methods",
    "redefined-outer-name",
    "protected-access",
    "attribute-defined-outside-init",
    "unused-argument",
    "broad-exception-caught",
    "cell-var-from-loop",
    "use-implicit-booleaness-not-comparison",
]
