[project]
requires-python = ">=3.14"

[tool.ruff]
line-length = 88
target-version = "py314"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP"]

[tool.mypy]
strict = true
ignore_missing_imports = true
explicit_package_bases = true

# These packages are not yet held to the --strict bar. The documented gate
# (CLAUDE.md) and CI both scan domain/, core/, controllers/, models/
# explicitly (see .github/workflows/ci.yml), so db/settings/views are not
# gated today -- but the overrides must live here as the single source of
# truth rather than in a separate mypy.ini, which mypy would otherwise treat
# as taking precedence over this section wholesale. Removing an override
# means that package must first pass `mypy --strict` cleanly.
[[tool.mypy.overrides]]
module = ["db.*"]
ignore_errors = true

[[tool.mypy.overrides]]
module = ["settings"]
ignore_errors = true

[[tool.mypy.overrides]]
module = ["views.*"]
ignore_errors = true

# Pyright runs as a CI + local gate alongside mypy, catching the editor-level
# (Pylance) type errors mypy's scope misses. It now covers the WHOLE project
# (include = ["."]) -- production code (domain/ core/ controllers/ models/ db/,
# settings.py, main.py, theme/, help/, version.py) is clean under pyright's
# default "standard" mode and stays fully strict. tests/ and views/ carry
# pre-existing, pyright-only noise that mypy never sees: validated-scalar
# construction ergonomics (Hours / BreakMinutes / PeriodType literals, #31),
# test-double-vs-typed-widget-attr assignments (#33), Mock assertion members,
# and tkinter stub friction. Those rules are baselined to "none" ONLY on the
# tests/ and views/ roots via the executionEnvironments below, so the gate
# exits 0 without a repo-wide cleanup -- the same "baseline, don't add new
# problems" approach as the pylint disable list. Trim those per-path overrides
# incrementally, not incidentally; production stays at full standard mode.
# (extraPaths = ["."] keeps `views.x` / `tests.x` imports resolvable once a
# per-directory execution environment root is declared.)
[tool.pyright]
include = ["."]
exclude = ["**/node_modules", "**/__pycache__", "**/.*"]
pythonVersion = "3.14"
typeCheckingMode = "standard"

[[tool.pyright.executionEnvironments]]
root = "tests"
extraPaths = ["."]
reportArgumentType = "none"
reportAttributeAccessIssue = "none"
reportPossiblyUnboundVariable = "none"
reportIncompatibleVariableOverride = "none"
reportOptionalMemberAccess = "none"
reportFunctionMemberAccess = "none"

[[tool.pyright.executionEnvironments]]
root = "views"
extraPaths = ["."]
reportArgumentType = "none"
reportAttributeAccessIssue = "none"
reportCallIssue = "none"
reportInvalidTypeForm = "none"
reportOptionalMemberAccess = "none"

[[tool.pyright.executionEnvironments]]
root = "."
extraPaths = ["."]

# Pylint runs as a CI + local gate alongside ruff/mypy, over the whole project.
# source-roots lets it resolve intra-project imports despite the space in the
# repo directory name (otherwise every `from core.x import ...` reports a false
# import-error).
#
# This disable list has been trimmed (issue #42) to ONLY the design-metric and
# structural rules the team deliberately keeps off project-wide, each with a
# rationale below. Everything else is enforced: docstrings are now required
# across the whole project, and the localized test-only idioms
# (redefined-outer-name, protected-access, unused fixture params) plus the
# handful of deliberate broad `except Exception` boot/settings guards are
# handled with narrowly-scoped module-level / inline `# pylint: disable`
# comments at their sites, not blanket-disabled here -- so new violations
# elsewhere are still caught. Pylint has no native per-path message control
# (unlike ruff's per-file-ignores), so module-level disables are the idiomatic
# substitute that keeps a single `pylint` CI command.
# PyMarkdown lints every tracked *.md (structure + prose): fence languages
# (MD040), blanks around fences/lists (MD031/MD032), a top-level heading
# (MD041), heading/spacing hygiene. Prose is hard-wrapped to 80 columns.
#
# MD013 (line-length): pymarkdown's MD013 has no per-element toggle for tables
# (unlike markdownlint), so it can't enforce 80 on prose while exempting the
# wide markdown tables and ASCII box-diagrams that can't wrap. code_blocks =
# false exempts the fenced diagrams; line_length = 320 clears the widest
# mdformat-aligned table row while still catching runaway lines. Prose is kept
# to 80 by hand (and by mdformat's word-wrap discipline), not by this ceiling.
# Table *style* (pipe/column/alignment consistency) is enforced separately by
# `mdformat --check`, which pymarkdown does not cover.
[tool.pymarkdown]
plugins.md013.line_length = 320
plugins.md013.heading_line_length = 320
plugins.md013.code_blocks = false

[tool.pylint.main]
source-roots = ["."]

[tool.pylint."messages control"]
disable = [
    # Structural parallelism between the four record-type tabs/models/controllers
    # is deliberate; R0801 is noisy, cross-file, and DRYing it fights the design.
    "duplicate-code",
    # tkinter widget __init__ and the report/balance calculators legitimately
    # take many parameters / locals; these are design metrics, not defects.
    "too-many-arguments",
    "too-many-positional-arguments",
    "too-many-locals",
    # tkinter views hold one instance attribute per widget -- inherent to the UI.
    "too-many-instance-attributes",
    # Controller validators are guard-clause ladders a return or two over the
    # default threshold; the linear early-return shape is intentional.
    "too-many-return-statements",
    # Long UI-build / validate / DB-migration methods in views/ and db/. Splitting
    # them is a separate refactor, out of scope for the static-analysis config.
    "too-many-branches",
    "too-many-statements",
    "too-many-lines",
    # Deep ancestry comes from the ttk.Frame / tkinter MRO, not our code.
    "too-many-ancestors",
    # Dataclasses and mixin bases with 0-1 public methods are intentional.
    "too-few-public-methods",
]
